--- a/src/components/SubmitDAGForm/SubmitDAGForm.css
+++ b/src/components/SubmitDAGForm/SubmitDAGForm.css
@@ -47,7 +47,7 @@
     border: 1px solid var(--border-primary);
     border-radius: 10px;
     padding: 8px;
-    margin-block-end: 21px;
+    margin-block-end: 23px;
 
     &:focus-visible {
       box-shadow: 0px 0px 2px 1px var(--box-shadow-color);
@@ -56,8 +56,8 @@
 
     &.error {
       border: 1px solid var(--border-error);
-      box-shadow: 0px 0px 2px 1px var(--border-error);
-      margin-block-end: 2px;
+      box-shadow: 0px 0px 2px 2px var(--border-error);
+      margin-block-end: 4px;
     }
   }
 
